@@ -1,6 +1,8 @@
 dpkg (1.14.12) UNRELEASED; urgency=low
 
-  [ Raphael Hertzog ]
+  [ Raphael Hertzog ]
+  * Add -I<file> option to dpkg-gensymbols to force the usage of a specific
+    symbols file.
   * Dpkg::Shlibs::find_library() now returns canonicalized paths.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 24 Nov 2007 07:38:13 +0200
